force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>Lead</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Lead ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>