force-app/main/default/objects/Lead__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 25L</fullName>
            </value>
            <value>
                <fullName>25L-50L</fullName>
            </value>
            <value>
                <fullName>50L-75L</fullName>
            </value>
            <value>
                <fullName>75L-1Cr</fullName>
            </value>
            <value>
                <fullName>1Cr-1.5Cr</fullName>
            </value>
            <value>
                <fullName>1.5Cr-2Cr</fullName>
            </value>
            <value>
                <fullName>Above 2Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>