force-app/main/default/objects/Lead__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Campaign Leads</relationshipLabel>
    <relationshipName>Campaign_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>