force-app/main/default/objects/Lead__c/fields/Campaign_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id_Text__c</fullName>
    <description>Staging field for external systems to pass Campaign auto-number text (e.g., CMP-00042). Before-insert trigger resolves this to the actual Campaign record Id and sets Campaign__c. External systems should map to this field instead of Campaign__c.</description>
    <inlineHelpText>Enter the Campaign ID (e.g., CMP-00042). System will automatically link the Campaign.</inlineHelpText>
    <label>Campaign ID Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>