force-app/main/default/objects/Lead__c/fields/Delete_Lead__c.field-meta.xml
<CustomField>
    <fullName>Delete_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Lead</label>
    <type>Checkbox</type>
</CustomField>