force-app/main/default/objects/Lead__c/fields/Duplicate_Of__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the existing lead when this record is a detected duplicate. Used by the leadDuplicateRedirector LWC to redirect users to the original lead.</description>
    <label>Duplicate Of</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Duplicate Leads</relationshipLabel>
    <relationshipName>Duplicate_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>