force-app/main/default/objects/Lead__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>NOT(
    ISPICKVAL(Lead_Status__c, &quot;Unqualified&quot;) ||
    ISPICKVAL(Lead_Status__c, &quot;Rejected&quot;) ||
    ISPICKVAL(Lead_Status__c, &quot;Request for Rejection&quot;) ||
    ISPICKVAL(Lead_Status__c, &quot;Closed Lost&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>