force-app/main/default/objects/Lead__c/fields/Last_Notes__c.field-meta.xml
<CustomField>
    <fullName>Last_Notes__c</fullName>
    <label>Last Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>