force-app/main/default/objects/Lead__c/fields/Last_Reengaged_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Reengaged_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Re-engaged Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Reengaged Campaign Leads</relationshipLabel>
    <relationshipName>Reengaged_Campaign_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>