force-app/main/default/objects/Lead__c/fields/Last_Reengaged_CP__c.field-meta.xml
<CustomField>
    <fullName>Last_Reengaged_CP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Re-engaged CP</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Reengaged CP Leads</relationshipLabel>
    <relationshipName>Reengaged_CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>