force-app/main/default/objects/Lead__c/fields/Last_Reengaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reengaged_Date__c</fullName>
    <label>Last Re-engaged Date</label>
    <type>Date</type>
</CustomField>