force-app/main/default/objects/Lead__c/fields/Last_Reengaged_Sub__c.field-meta.xml
<CustomField>
    <fullName>Last_Reengaged_Sub__c</fullName>
    <label>Last Re-engaged Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>