force-app/main/default/objects/Lead__c/fields/Last_Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reopened_Date__c</fullName>
    <label>Last Re-opened Date</label>
    <type>Date</type>
</CustomField>