force-app/main/default/objects/Lead__c/fields/Last_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Score_Date__c</fullName>
    <description>Timestamp of the last scoring calculation for this lead.</description>
    <label>Last Score Date</label>
    <type>DateTime</type>
</CustomField>