force-app/main/default/objects/Lead__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dynamically calculated lead score based on active Lead_Score_Rule__c records. Updated on insert/update by LeadScoringEngine.</description>
    <label>Lead Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>