force-app/main/default/objects/Lead__c/fields/Lead_Score_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Tier__c</fullName>
    <description>Score tier resolved from Lead_Score_Tier__c config (e.g. Hot, Warm, Cool, Cold). Set by LeadScoringEngine.</description>
    <label>Lead Score Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>