force-app/main/default/objects/Lead__c/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>