force-app/main/default/objects/Lead__c/fields/Pre_Sale_User__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sale_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Sale User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pre_Sale_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>