force-app/main/default/objects/Lead__c/fields/PreSales_Status__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Status__c</fullName>
    <label>Pre-Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Site Visit Scheduled</fullName>
            </value>
            <value>
                <fullName>Pushed to Sales</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Request for Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>