force-app/main/default/objects/Lead__c/fields/Primary_CP__c.field-meta.xml
<CustomField>
    <fullName>Primary_CP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Primary CP Leads</relationshipLabel>
    <relationshipName>Primary_CP_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>