force-app/main/default/objects/Lead__c/fields/Primary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile__c</fullName>
    <label>Primary Mobile</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>