force-app/main/default/objects/Lead__c/fields/Primary_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sub_Source__c</fullName>
    <label>Primary Sub Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>