force-app/main/default/objects/Lead__c/fields/Purchase_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Purpose__c</fullName>
    <label>Purchase Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>