force-app/main/default/objects/Lead__c/fields/Secondary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile__c</fullName>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>