force-app/main/default/objects/Lead__c/fields/Temp_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Temp_Expiry__c</fullName>
    <label>Temp Ownership Expiry</label>
    <type>Date</type>
</CustomField>