force-app/main/default/objects/Lead__c/fields/Temp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Temp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temporary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Temp Owned Leads</relationshipLabel>
    <relationshipName>Temp_Owned_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>