force-app/main/default/objects/Lead__c/fields/Temp_Start__c.field-meta.xml
<CustomField>
    <fullName>Temp_Start__c</fullName>
    <label>Temp Ownership Start</label>
    <type>Date</type>
</CustomField>