force-app/main/default/objects/Lead__c/fields/Transferred_By__c.field-meta.xml
<CustomField>
    <fullName>Transferred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transferred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transferred_By_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>