force-app/main/default/objects/Lead__c/fields/Transferred_On__c.field-meta.xml
<CustomField>
    <fullName>Transferred_On__c</fullName>
    <label>Transferred On</label>
    <type>DateTime</type>
</CustomField>