force-app/main/default/objects/Lead__c/recordTypes/Pre_Sales.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sales</fullName>
    <active>true</active>
    <label>Pre Sales</label>
</RecordType>