force-app/main/default/objects/Lead__c/validationRules/Mobile_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    /* Primary must be 10 digits */
    AND(
        NOT(ISBLANK(Primary_Mobile__c)),
        NOT(REGEX(Primary_Mobile__c, &quot;^[0-9]{10}$&quot;))
    ),

    /* Secondary must be 10 digits */
    AND(
        NOT(ISBLANK(Secondary_Mobile__c)),
        NOT(REGEX(Secondary_Mobile__c, &quot;^[0-9]{10}$&quot;))
    ),

    /* Both numbers should not be same */
    AND(
        NOT(ISBLANK(Primary_Mobile__c)),
        NOT(ISBLANK(Secondary_Mobile__c)),
        Primary_Mobile__c = Secondary_Mobile__c
    )
)</errorConditionFormula>
    <errorMessage>Enter valid 10-digit mobile numbers. Primary and Secondary numbers cannot be the same.</errorMessage>
</ValidationRule>