force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>